--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "normalize.css": "^8.0.1",
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@types/node": "^20.6.2",
     "@vitejs/plugin-vue": "^4.2.3",
+    "less": "^4.2.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
