--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
+    "vee-validate": "^4.11.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
