--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.6",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vee-validate": "^4.11.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
