--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
